--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.6",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.1",
-    "expo-font": "~8.3.0",
     "expo": "~40.0.0",
+    "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.3",
     "polished": "^4.0.5",
     "react": "16.13.1",
