--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@expo/vector-icons": "12.0.2",
     "@react-native-community/checkbox": "^0.5.6",
+    "@react-native-community/datetimepicker": "3.0.4",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.1",
+    "date-fns": "^2.16.1",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "polished": "^4.0.5",
